# opendev

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RELEASE_FLOW.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/opendev-agents/src/: doom_loop.rs  lib.rs  llm_calls.rs  main_agent.rs  react_loop.rs  traits.rs
crates/opendev-agents/src/prompts/: embedded.rs  mod.rs  reminders.rs
crates/opendev-agents/src/react_loop/: execution.rs
crates/opendev-agents/src/response/: cleaner.rs
crates/opendev-agents/src/skills/: discovery.rs  loader.rs  parsing.rs
crates/opendev-agents/src/subagents/: custom_loader.rs  manager.rs  mod.rs  spec.rs
crates/opendev-agents/templates/: reminders.md
crates/opendev-agents/templates/system/: init.md
crates/opendev-agents/templates/tools/: tool-write-todos.md
crates/opendev-channels/: Cargo.toml
crates/opendev-channels/src/: lib.rs  router.rs
crates/opendev-channels/src/telegram/: adapter.rs  api.rs  error.rs  format.rs  mod.rs  polling.rs  types.rs
crates/opendev-cli/: Cargo.toml
crates/opendev-cli/src/: cli.rs  commands.rs  main.rs  runners.rs  runtime.rs  tui_runner.rs
crates/opendev-cli/src/runtime/: channel_executor.rs  mod.rs  tools.rs
crates/opendev-cli/src/setup/: interactive_menu.rs  rail_ui.rs
crates/opendev-config/src/: loader.rs
crates/opendev-config/src/loader/: validation.rs
crates/opendev-config/tests/: integration.rs
crates/opendev-context/: Cargo.toml
crates/opendev-context/src/: compaction.rs  subdir_instructions.rs
crates/opendev-context/src/compaction/compactor/: mod.rs  summary.rs
crates/opendev-context/src/environment/: instructions.rs  mod.rs
crates/opendev-history/src/: lib.rs  session_manager.rs
crates/opendev-http/: Cargo.toml
crates/opendev-http/src/: adapted_client.rs  circuit_breaker.rs  client.rs  lib.rs  streaming.rs
crates/opendev-http/src/adapters/: anthropic.rs  azure.rs  base.rs  bedrock.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  openai.rs
crates/opendev-memory/src/: embeddings.rs  lib.rs  local_embeddings.rs  reflector.rs  selector.rs  session_search.rs  summarizer.rs
crates/opendev-memory/tests/: integration.rs
crates/opendev-models/src/: config.rs  lib.rs
crates/opendev-models/src/config/: agent.rs  mod.rs
crates/opendev-repl/src/: repl.rs
crates/opendev-repl/src/commands/: builtin.rs
crates/opendev-runtime/src/: constants.rs  lib.rs  permissions.rs  sound.rs
crates/opendev-runtime/src/approval/: manager.rs
crates/opendev-runtime/src/custom_commands/: mod.rs
crates/opendev-tools-core/src/: lib.rs  middleware.rs  parallel.rs  policy.rs  registry.rs  sanitizer.rs  traits.rs  validation.rs
crates/opendev-tools-core/src/registry/: execution.rs  mod.rs
crates/opendev-tools-impl/src/: agents.rs  bash.rs  browser.rs  custom_tool.rs  diagnostics_helper.rs  diff_preview.rs  file_edit.rs  file_list.rs  file_search.rs  file_write.rs  git.rs  lib.rs  lsp_query.rs  memory.rs  message.rs  multi_edit.rs  patch.rs  path_utils.rs  schedule.rs  session.rs  todo.rs  vlm.rs
crates/opendev-tools-impl/src/agents/: list.rs
crates/opendev-tools-impl/src/bash/: helpers.rs  mod.rs  patterns.rs
crates/opendev-tools-impl/tests/: integration.rs
crates/opendev-tools-lsp/src/: diagnostics.rs  lib.rs  workspace_symbol_tool.rs
crates/opendev-tui/: Cargo.toml
crates/opendev-tui/src/: app.rs  event.rs  lib.rs
crates/opendev-tui/src/app/: cache.rs  event_dispatch.rs  key_handler.rs  mod.rs  render.rs  slash_commands.rs  state.rs  tick.rs  types.rs
crates/opendev-tui/src/autocomplete/: completers.rs
crates/opendev-tui/src/controllers/: model_picker.rs
crates/opendev-tui/src/event/: handler.rs  mod.rs  recorder.rs
crates/opendev-tui/src/formatters/: markdown.rs  mod.rs  style_tokens.rs  tool_registry.rs  wrap.rs
crates/opendev-tui/src/widgets/: background_tasks.rs  conversation.rs  input.rs  mod.rs  nested_tool.rs  status_bar.rs  thinking.rs  tool_display.rs
crates/opendev-tui/src/widgets/conversation/: mod.rs  spinner.rs
crates/opendev-tui/src/widgets/nested_tool/: mod.rs
crates/opendev-web/src/routes/: config.rs
docs/: architecture.md  providers.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bash_dangerous.rs  fuzz_patch_hunk.rs
migration_docs/: CONTEXT_ENGINEERING.md  SETUP_WIZARD_PORT.md
opendev/cli/: main.py
opendev/core/auth/: __init__.py  credentials.py
opendev/core/events/: __init__.py  bus.py  types.py
opendev/core/plugins/manager/: __init__.py  bundle.py  installer.py  manager.py  marketplace.py
opendev/core/runtime/: custom_commands.py  session_model.py
opendev/core/snapshot/: manager.py
opendev/core/utils/: sound.py
opendev/repl/: repl.py
opendev/repl/commands/: __init__.py  config_commands.py  session_commands.py  session_model_commands.py
opendev/repl/react_executor/: __init__.py  executor.py  iteration.py  session_persistence.py  thinking.py  tool_processing.py
opendev/ui_textual/: nested_callback.py  runner.py
opendev/ui_textual/autocomplete_internal/: commands.py
opendev/ui_textual/controllers/: command_router.py
opendev/ui_textual/formatters/: style_formatter.py
opendev/ui_textual/managers/: __init__.py  frecency_manager.py
opendev/ui_textual/runner_components/: model_config_manager.py
opendev/ui_textual/screens/: command_palette.py  session_picker.py
opendev/ui_textual/ui_callback/: __init__.py  agent_display.py  callback.py  plan_approval.py  tool_display.py
opendev/ui_textual/widgets/: conversation_log.py  toast.py
opendev/web/: agent_executor.py  server.py  state.py
opendev/web/routes/: sessions.py
opendev/web/static/: index.html
opendev/web/static/assets/: index-DTvWXS4D.js  index-DW_qmobQ.js  index-DucKqIME.css  index-gXX8Kat7.css
scripts/: bench-gate.sh
tests/: test_doom_loop.py  test_parallel_real.py  test_reminders.py  test_session_model.py
web-ui/: vite.config.ts
web-ui/src/components/Layout/: NewSessionModal.tsx  SessionModelModal.tsx  SessionsSidebar.tsx
(+22 files in other folders)
