[workspace]
resolver = "2"
members = [
    "crates/opendev-models",
    "crates/opendev-config",
    "crates/opendev-http",
    "crates/opendev-context",
    "crates/opendev-history",
    "crates/opendev-memory",
    "crates/opendev-tools-core",
    "crates/opendev-tools-impl",
    "crates/opendev-tools-lsp",
    "crates/opendev-tools-symbol",
    "crates/opendev-agents",
    "crates/opendev-web",
    "crates/opendev-repl",
    "crates/opendev-cli",
    "crates/opendev-mcp",
    "crates/opendev-channels",
    "crates/opendev-tui",
    "crates/opendev-runtime",
    "crates/opendev-hooks",
    "crates/opendev-plugins",
    "crates/opendev-docker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.28", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
http-body-util = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# System
libc = "0.2"

# Regex
regex = "1"

# File system
ignore = "0.4"
glob = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs-next = "2"

# Testing
tempfile = "3"

# Internal crates
opendev-models = { path = "crates/opendev-models" }
opendev-config = { path = "crates/opendev-config" }
opendev-http = { path = "crates/opendev-http" }
opendev-context = { path = "crates/opendev-context" }
opendev-history = { path = "crates/opendev-history" }
opendev-memory = { path = "crates/opendev-memory" }
opendev-tools-core = { path = "crates/opendev-tools-core" }
opendev-tools-impl = { path = "crates/opendev-tools-impl" }
opendev-tools-lsp = { path = "crates/opendev-tools-lsp" }
opendev-tools-symbol = { path = "crates/opendev-tools-symbol" }
opendev-agents = { path = "crates/opendev-agents" }
opendev-web = { path = "crates/opendev-web" }
opendev-mcp = { path = "crates/opendev-mcp" }
opendev-channels = { path = "crates/opendev-channels" }
opendev-tui = { path = "crates/opendev-tui" }
opendev-repl = { path = "crates/opendev-repl" }
opendev-cli = { path = "crates/opendev-cli" }
opendev-runtime = { path = "crates/opendev-runtime" }
opendev-hooks = { path = "crates/opendev-hooks" }
opendev-plugins = { path = "crates/opendev-plugins" }
opendev-docker = { path = "crates/opendev-docker" }
url = "2"
