[package]
name = "opendev-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context engineering: compaction, validation, and context picking for OpenDev"

[dependencies]
opendev-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
